build xml syntax errors fixed

--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,7 @@
   <target name="jar" depends="compile">
     <jar destfile="${dist.dir}\Rectangle.jar" basedir="${build.dir}">
 	  <manifest>
-	     <attribute name="Main-Class" value="Rectangulator">
+	     <attribute name="Main-Class" value="Rectangulator"/>
 	  </manifest>
     </jar>	
   </target>
