--- a/build.xml
+++ b/build.xml
@@ -37,7 +37,7 @@
  
   <!-- Creates a deployable jar file -->
   <target name="jar" depends="compile">
-    <jar destfile="${dist.dir}\Rectangle_${env.BUILD-NUMBER}.jar" basedir="${build.dir}">
+    <jar destfile="${dist.dir}\Rectangle_${env.BUILD_NUMBER}.jar" basedir="${build.dir}">
 	  <manifest>
 	     <attribute name="Main-Class" value="Rectangulator"/>
 	  </manifest>
